# sandboxStudy

./: CMakeLists.txt  dialogconnect.cpp  dialogconnect.h  dialogconnect.ui  dialogprotocol.cpp  dialogprotocol.h  dialogprotocol.ui  dialogsettingvispath.cpp  dialogsettingvispath.h  dialogsettingvispath.ui  digitizeroperation (Copy).cpp  digitizeroperation (Copy).h  digitizeroperation.cpp  digitizeroperation.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
altvis/: CMakeLists.txt  main.cpp  rootcontrol.cpp  rootcontrol.h
vis/: CMakeLists.txt  main.cpp  rootcontrol.cpp  rootcontrol.h
vis/rootVis.app/Contents/: Info.plist
vis/rootVis.app/Contents/MacOS/: rootVis
